--- a/Rop.ControllerGenerator/Properties/launchSettings.json
+++ b/Rop.ControllerGenerator/Properties/launchSettings.json
@@ -5,7 +5,7 @@
     },
     "DebugComponent": {
       "commandName": "DebugRoslynComponent",
-      "targetProject": "..\\test.winforms7\\test.winforms7.csproj"
+      "targetProject": "..\\tests\test.controllerGenerator\\test.controllergenerator.csproj"
     }
   }
 }
