--- a/Rop.ControllerGenerator/Rop.ControllerGenerator.csproj
+++ b/Rop.ControllerGenerator/Rop.ControllerGenerator.csproj
@@ -16,6 +16,7 @@
 		<RepositoryUrl>https://api.nuget.org/v3/index.json</RepositoryUrl>
 		<PackageReadmeFile>Readme.md</PackageReadmeFile>
 		<IncludeBuildOutput>false</IncludeBuildOutput>
+		<EnforceExtendedAnalyzerRules>true</EnforceExtendedAnalyzerRules>
 	</PropertyGroup>
 	<ItemGroup>
 		<!-- Package the generator in the analyzer directory of the nuget package -->
@@ -31,6 +32,6 @@
 		<PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.6.0" PrivateAssets="all" />
 		<PackageReference Include="Microsoft.CodeAnalysis.Analyzers" Version="3.3.4" PrivateAssets="all" />
 	</ItemGroup>
-	<Import Project="..\Rop.GeneratorShared\Rop.GeneratorShared.projitems" Label="Shared" />
+	<Import Project="..\Rop.Generators.Shared\Rop.Generators.Shared.projitems" Label="Shared" />
 
 </Project>
