--- a/Rop.ProxyGenerator/Rop.ProxyGenerator.csproj
+++ b/Rop.ProxyGenerator/Rop.ProxyGenerator.csproj
@@ -32,4 +32,5 @@
 		  <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.2.0" PrivateAssets="all" />
 		  <PackageReference Include="Microsoft.CodeAnalysis.Analyzers" Version="3.3.3" PrivateAssets="all" />
 	  </ItemGroup>
+	  <Import Project="..\Rop.Generators.Shared\Rop.Generators.Shared.projitems" Label="Shared" />
 </Project>
