--- a/Rop.DerivedFromGenerator/Rop.DerivedFromGenerator.csproj
+++ b/Rop.DerivedFromGenerator/Rop.DerivedFromGenerator.csproj
@@ -32,6 +32,6 @@
 		<PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.6.0" PrivateAssets="all" />
 		<PackageReference Include="Microsoft.CodeAnalysis.Analyzers" Version="3.3.4" PrivateAssets="all" />
 	</ItemGroup>
-	<Import Project="..\Rop.GeneratorShared\Rop.GeneratorShared.projitems" Label="Shared" />
+	<Import Project="..\Rop.Generators.Shared\Rop.Generators.Shared.projitems" Label="Shared" />
 
 </Project>
