--- a/Rop.OneOfExtensionGenerator/Rop.OneOfExtensionGenerator.csproj
+++ b/Rop.OneOfExtensionGenerator/Rop.OneOfExtensionGenerator.csproj
@@ -33,5 +33,6 @@
 	  <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.1.0" PrivateAssets="all" />
 	  <PackageReference Include="Microsoft.CodeAnalysis.Analyzers" Version="3.3.3" PrivateAssets="all" />
   </ItemGroup>
+  <Import Project="..\Rop.Generators.Shared\Rop.Generators.Shared.projitems" Label="Shared" />
 	
 </Project>
