--- a/Rop.StaticExtensionGenerator/Rop.StaticExtensionGenerator.csproj
+++ b/Rop.StaticExtensionGenerator/Rop.StaticExtensionGenerator.csproj
@@ -1,11 +1,11 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-	  <PackageId>Rop.Winforms7.StaticExtensionGenerator</PackageId>
-	  <Title>Rop.Winforms7.StaticExtensionGenerator</Title>
+	  <PackageId>Rop.StaticExtensionGenerator</PackageId>
+	  <Title>Rop.StaticExtensionGenerator</Title>
 	  <TargetFramework>netstandard2.0</TargetFramework>
 	  <IsRoslynComponent>true</IsRoslynComponent>
-	  <RootNamespace>Rop.Winforms7.StaticExtensionGenerator</RootNamespace>
+	  <RootNamespace>Rop.StaticExtensionGenerator</RootNamespace>
 	  <PackageTags>extensions;generics;static;winforms;source-generator;roslyn</PackageTags>
 	  <Description>Source generator to create static extensions</Description>
 	  <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
@@ -15,6 +15,7 @@
 	  <Copyright>2023 Ramon Ordiales</Copyright>
 	  <PackageLicenseExpression>GPL-3.0-or-later</PackageLicenseExpression>
 	  <RepositoryUrl>https://api.nuget.org/v3/index.json</RepositoryUrl>
+	  <PackageProjectUrl>https://github.com/ramoneeza/Rop.Generators</PackageProjectUrl>
 	  <PackageReadmeFile>Readme.md</PackageReadmeFile>
 	  <IncludeBuildOutput>false</IncludeBuildOutput>
   </PropertyGroup>
