--- a/Rop.CopyPartialGenerator/Rop.CopyPartialGenerator.csproj
+++ b/Rop.CopyPartialGenerator/Rop.CopyPartialGenerator.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 <PropertyGroup>
 	<PackageId>Rop.CopyPartialGenerator</PackageId>
 	<Title>Rop.CopyPartialGenerator</Title>
@@ -8,13 +8,13 @@
 	<PackageTags>extensions;proxy;source generator;roslyn</PackageTags>
 	<Description>Source generator to create ProxyClasses</Description>
 	<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-	<Version>1.0.5</Version>
+	<Version>1.0.8</Version>
 	<Authors>Ramon Ordiales Plaza</Authors>
 	<Company>Ramon Ordiales Plaza</Company>
 	<Copyright>2022 Ramon Ordiales</Copyright>
 	<PackageLicenseExpression>GPL-3.0-or-later</PackageLicenseExpression>
 	<RepositoryUrl>https://api.nuget.org/v3/index.json</RepositoryUrl>
-	<PackageProjectUrl>https://github.com/ramoneeza/Rop.CopyPartialGenerator</PackageProjectUrl>
+	<PackageProjectUrl>https://github.com/ramoneeza/Rop.Generators</PackageProjectUrl>
 	<PackageReadmeFile>Readme.md</PackageReadmeFile>
 	<IncludeBuildOutput>false</IncludeBuildOutput>
 	</PropertyGroup>
