--- a/Rop.DerivedFrom.Annotations/Rop.DerivedFrom.Annotations.csproj
+++ b/Rop.DerivedFrom.Annotations/Rop.DerivedFrom.Annotations.csproj
@@ -1,9 +1,26 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
-  </PropertyGroup>
+      <Title>Rop.DerivedFrom.Annotations</Title>
+	  <RootNamespace>Rop.DerivedFrom.Annotations</RootNamespace>
+	  <TargetFramework>netstandard2.0</TargetFramework>
+	  <PackageTags>helper-classes;winforms;annotations</PackageTags>
+	  <Description>Annotations for DerivedFrom Generator</Description>
+	  <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+	  <Version>1.0.2</Version>
+	  <Authors>Ramon Ordiales Plaza</Authors>
+	  <Company>Ramon Ordiales Plaza</Company>
+	  <Copyright>2022 Ramon Ordiales</Copyright>
+	  <PackageLicenseExpression>GPL-3.0-or-later</PackageLicenseExpression>
+	  <RepositoryUrl>https://api.nuget.org/v3/index.json</RepositoryUrl>
+	  <PackageProjectUrl>https://github.com/ramoneeza/Rop.Generators</PackageProjectUrl>
+	  <PackageId>Rop.DerivedFrom.Annotations</PackageId>
+</PropertyGroup>
+	<ItemGroup>
+		<Compile Remove="Packs\**" />
+		<EmbeddedResource Remove="Packs\**" />
+		<None Remove="Packs\**" />
+		<None Include=".\Readme.md" Pack="true" PackagePath="\" />
+	</ItemGroup>
 
 </Project>
