--- a/Rop.DerivedFromGenerator/Rop.DerivedFromGenerator.csproj
+++ b/Rop.DerivedFromGenerator/Rop.DerivedFromGenerator.csproj
@@ -8,12 +8,13 @@
 	  <PackageTags>extensions;generics;winforms;source-generator;roslyn</PackageTags>
 	  <Description>Source generator to derive form from generic</Description>
 	  <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-	  <Version>1.0.2</Version>
+	  <Version>1.0.3</Version>
 	  <Authors>Ramon Ordiales Plaza</Authors>
 	  <Company>Ramon Ordiales Plaza</Company>
 	  <Copyright>2023 Ramon Ordiales</Copyright>
 	  <PackageLicenseExpression>GPL-3.0-or-later</PackageLicenseExpression>
 	  <RepositoryUrl>https://api.nuget.org/v3/index.json</RepositoryUrl>
+		<PackageProjectUrl>https://github.com/ramoneeza/Rop.Generators</PackageProjectUrl>
 	  <PackageReadmeFile>Readme.md</PackageReadmeFile>
 	  <IncludeBuildOutput>false</IncludeBuildOutput>
   </PropertyGroup>
