--- a/Rop.OneOfExtension.Annotations/Rop.OneOfExtension.Annotations.csproj
+++ b/Rop.OneOfExtension.Annotations/Rop.OneOfExtension.Annotations.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
 	  <Title>Rop.OneOfExtension.Annotations</Title>
@@ -7,13 +7,13 @@
 	  <PackageTags>helper-classes;extensions;oneof;annotations</PackageTags>
 	  <Description>Annotations for decorate OneOf Helper Extensions</Description>
 	  <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-	  <Version>1.0.2</Version>
+	  <Version>1.0.4</Version>
 	  <Authors>Ramon Ordiales Plaza</Authors>
 	  <Company>Ramon Ordiales Plaza</Company>
 	  <Copyright>2022 Ramon Ordiales</Copyright>
 	  <PackageLicenseExpression>GPL-3.0-or-later</PackageLicenseExpression>
 	  <RepositoryUrl>https://api.nuget.org/v3/index.json</RepositoryUrl>
-	  <PackageProjectUrl>https://github.com/ramoneeza/Rop.OneOfExtension.Annotations</PackageProjectUrl>
+	  <PackageProjectUrl>https://github.com/ramoneeza/Rop.Generators</PackageProjectUrl>
 	  <PackageReadmeFile>Readme.md</PackageReadmeFile>
 	  <PackageId>Rop.OneOfExtension.Annotations</PackageId>
   </PropertyGroup>
@@ -21,6 +21,6 @@
 		<Compile Remove="Packs\**" />
 		<EmbeddedResource Remove="Packs\**" />
 		<None Remove="Packs\**" />
-		<None Include="..\Readme.md" Pack="true" PackagePath="\" />
+		<None Include="Readme.md" Pack="true" PackagePath="\" />
 	</ItemGroup>
 </Project>
