--- a/Rop.ProxyGenerator.Annotations/Rop.ProxyGenerator.Annotations.csproj
+++ b/Rop.ProxyGenerator.Annotations/Rop.ProxyGenerator.Annotations.csproj
@@ -7,13 +7,13 @@
 		<PackageTags>helper-classes;proxy;annotations</PackageTags>
 		<Description>Annotations for decorate Proxy Generator</Description>
 		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-		<Version>1.0.18</Version>
+		<Version>1.0.20</Version>
 		<Authors>Ramon Ordiales Plaza</Authors>
 		<Company>Ramon Ordiales Plaza</Company>
 		<Copyright>2022 Ramon Ordiales</Copyright>
 		<PackageLicenseExpression>GPL-3.0-or-later</PackageLicenseExpression>
 		<RepositoryUrl>https://api.nuget.org/v3/index.json</RepositoryUrl>
-		<PackageProjectUrl>https://github.com/ramoneeza/Rop.ProxyGenerator</PackageProjectUrl>
+		<PackageProjectUrl>https://github.com/ramoneeza/Rop.Generators</PackageProjectUrl>
 		<PackageReadmeFile>Readme.md</PackageReadmeFile>
 		<PackageId>Rop.ProxyGenerator.Annotations</PackageId>
 	</PropertyGroup>
