--- a/Rop.ProxyGenerator/Rop.ProxyGenerator.csproj
+++ b/Rop.ProxyGenerator/Rop.ProxyGenerator.csproj
@@ -8,13 +8,13 @@
 		  <PackageTags>extensions;proxy;source-generator;roslyn</PackageTags>
 		  <Description>Source generator to create ProxyClasses</Description>
 		  <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-		  <Version>1.0.25</Version>
+		  <Version>1.0.27</Version>
 		  <Authors>Ramon Ordiales Plaza</Authors>
 		  <Company>Ramon Ordiales Plaza</Company>
 		  <Copyright>2022 Ramon Ordiales</Copyright>
 		  <PackageLicenseExpression>GPL-3.0-or-later</PackageLicenseExpression>
 		  <RepositoryUrl>https://api.nuget.org/v3/index.json</RepositoryUrl>
-		  <PackageProjectUrl>https://github.com/ramoneeza/Rop.ProxyGenerator</PackageProjectUrl>
+		<PackageProjectUrl>https://github.com/ramoneeza/Rop.Generators</PackageProjectUrl>
 		  <PackageReadmeFile>Readme.md</PackageReadmeFile>
 		  <IncludeBuildOutput>false</IncludeBuildOutput>
 	  </PropertyGroup>
