--- a/Rop.StaticExtension.Annotations/Rop.StaticExtension.Annotations.csproj
+++ b/Rop.StaticExtension.Annotations/Rop.StaticExtension.Annotations.csproj
@@ -1,9 +1,32 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+
+	  <Title>Rop.StaticExtension.Annotations</Title>
+	  <RootNamespace>Rop.StaticExtension.Annotations</RootNamespace>
+	  <PackageTags>helper-classes;static;extensions;annotations</PackageTags>
+	  <Description>Annotations for decorate Static Extension Generator</Description>
+	  <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+	  <Version>1.0.1</Version>
+	  <Authors>Ramon Ordiales Plaza</Authors>
+	  <Company>Ramon Ordiales Plaza</Company>
+	  <Copyright>2023 Ramon Ordiales</Copyright>
+	  <PackageLicenseExpression>GPL-3.0-or-later</PackageLicenseExpression>
+	  <RepositoryUrl>https://api.nuget.org/v3/index.json</RepositoryUrl>
+	  <PackageProjectUrl>https://github.com/ramoneeza/Rop.Generators</PackageProjectUrl>
+	  <PackageReadmeFile>Readme.md</PackageReadmeFile>
+	  <PackageId>Rop.StaticExtension.Annotations</PackageId>
+
   </PropertyGroup>
+
+	<ItemGroup>
+		<Compile Remove="Packs\**" />
+		<EmbeddedResource Remove="Packs\**" />
+		<None Remove="Packs\**" />
+		<None Include=".\Readme.md" Pack="true" PackagePath="\" />
+	</ItemGroup>
 
 </Project>
