--- a/Rop.StaticExtension.Annotations/Rop.StaticExtension.Annotations.csproj
+++ b/Rop.StaticExtension.Annotations/Rop.StaticExtension.Annotations.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
@@ -10,7 +10,7 @@
 	  <PackageTags>helper-classes;static;extensions;annotations</PackageTags>
 	  <Description>Annotations for decorate Static Extension Generator</Description>
 	  <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-	  <Version>1.0.1</Version>
+	  <Version>1.0.2</Version>
 	  <Authors>Ramon Ordiales Plaza</Authors>
 	  <Company>Ramon Ordiales Plaza</Company>
 	  <Copyright>2023 Ramon Ordiales</Copyright>
