Derived From for Winforms Specific problems

--- a/Rop.DerivedFromGenerator/Properties/launchSettings.json
+++ b/Rop.DerivedFromGenerator/Properties/launchSettings.json
@@ -5,7 +5,7 @@
     },
     "DebugComponent": {
       "commandName": "DebugRoslynComponent",
-      "targetProject": "..\\test.Derived\\test.Derived.csproj"
+      "targetProject": "E:\\Dropbox\\ROAMING\\Visual Studio 2022\\Snippers\\Rop.Generators\\Test\\Test.DerivedFrom\\Test.DerivedFrom.csproj"
     }
   }
 }
